Add additional deb files

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ mycroft-core (0.7.5) unstable; urgency=low
 
   * Initial release
 
- -- Ethan Ward <ethan.ward@mycroft.ai>  Tue, 12 Jul 2016 14:36:01 -0500
+ -- Mycroft Devs <devops@mycroft.ai>  Tue, 12 Jul 2016 14:36:01 -0500
