--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+mycroft-core (0.7.5ubuntu1~1.gbp778426) UNRELEASED; urgency=medium
+
+  ** SNAPSHOT build @7784262b72ce4a554b69d82cf7b03ce7746290db **
+
+  [ Ethan Ward ]
+  * Add more deb files
+
+  [ Mycroft Devs ]
+
+ -- Ethan Ward <ethanandrewward@gmail.com>  Thu, 14 Jul 2016 09:52:53 -0500
+
 mycroft-core (0.7.5) unstable; urgency=low
 
   * Initial release
