--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-mycroft-core (0.7.5ubuntu1~2.gbp6044b8) UNRELEASED; urgency=medium
+mycroft-core (0.7.5ubuntu1~2.gbp6044b8) unstable; urgency=medium
 
   ** SNAPSHOT build @6044b842fdb48dbb5c433c8179e06179a0a7ce28 **
 
